--- a/index.htm
+++ b/index.htm
@@ -173,6 +173,7 @@
     <a href="#gb300">           <img src="img/photos/gb300.jpg"             class="t0" title="GB300"/></a>
     <a href="#q19">             <img src="img/photos/q19.jpg"               class="t0" title="Q19"/></a>
     <a href="#x7s">             <img src="img/photos/x7s.jpg"               class="t0" title="X7S"/></a>
+    <a href="#x5">              <img src="img/photos/x5.jpg"                class="t0" title="GAME BOX X5"/></a>
 </p>
 </div>
 
@@ -7465,7 +7466,6 @@ Q19</h3>
 <a href="handheld/q19_screen.htm">
 可視角</a><br>
 <br><br><br><br>
-</p>
 
 <div id="x7s"></div>
 <h3><img src="img/photos/x7s.jpg" class="floatLeft"/>
@@ -7478,6 +7478,24 @@ X7S</h3>
 
 &dash;
 <a href="handheld/x7s_screen.htm">
+可視角</a><br>
+<br><br><br><br>
+
+<div id="x5"></div>
+<h3><img src="img/photos/x5.jpg" class="floatLeft"/>
+GAME BOX X5</h3>
+<hr size="1"><br><br><br><br><br>
+
+&dash;
+<a href="handheld/x5_spec.htm">
+簡要規格</a><br>
+
+&dash;
+<a href="handheld/x5_teardown.htm">
+拆機</a><br>
+
+&dash;
+<a href="handheld/x5_screen.htm">
 可視角</a><br>
 <br><br><br><br>
 </p>
