--- a/program.htm
+++ b/program.htm
@@ -1349,11 +1349,11 @@ Flat Assembler (FASM)</h3>
     &emsp;&emsp;&emsp;&emsp;&oplus;
     <b>Painting</b><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&loawt;
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
         <a href="program/fasm_win32_pixel.htm">
         Set Pixel</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&loawt;
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
         <a href="program/fasm_win32_brush.htm">
         Create Brush</a><br>
 
